# Pandasclean

./: .gitignore  README.md  auto.py  pandasclean.py  pyproject.toml  testing.ipynb  tests.py
pandasclean.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
