[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandasclean"
version = "0.1.2"
description = "A lightweight library for cleaning and optimizing pandas DataFrames"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Atharva", email = "atharvashah7@gmail.com"}
]
keywords = ["pandas", "data cleaning", "outliers", "memory", "nan", "dataframe"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/atharva557/Pandasclean"
Repository = "https://github.com/atharva557/Pandasclean"